--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "daisyui": "^2.15.0",
+    "firebase": "^9.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^5.0.3",
+    "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.0.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -34,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.0.24"
   }
 }
