--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^5.0.3",
+    "react-hook-form": "^7.31.2",
     "react-query": "^3.39.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
